Fix header padding on mobile view
Fixes header padding on mobile

--- a/project-abundance-design-system/project-abundance-design-system-website/pages/design-system-style.css
+++ b/project-abundance-design-system/project-abundance-design-system-website/pages/design-system-style.css
@@ -482,7 +482,11 @@ nav.clean {
                 display: none;
             }
             header {
-                justify-content: space-evenly;
+                justify-content: space-between;
+            }
+
+            header img {
+                padding-left: 5.7%;
             }
             nav {
                 display: none;
